Add redis and sidekiq to render config

--- a/render.yaml
+++ b/render.yaml
@@ -11,6 +11,30 @@ services:
         fromDatabase:
           name: chirper-db
           property: connectionString
+      - key: REDIS_URL
+        fromService:
+          type: redis
+          name: chirper-redis
+          property: connectionString
+      - key: RAILS_MASTER_KEY
+        sync: false
+
+  - type: redis
+    name: chirper-redis
+    maxmemoryPolicy: noeviction
+    ipAllowList: []
+
+  - type: worker
+    name: chirper-sidekiq
+    env: ruby
+    buildCommand: bundle install
+    startCommand: bundle exec sidekiq
+    envVars:
+      - key: REDIS_URL
+        fromService:
+          type: redis
+          name: sidekiq-redis
+          property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
 
